# slm-coding-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: m4-agent-system.yaml  m4-local.yaml  m4-multi-agent.yaml  openai-cloud.yaml
docs/: example-report-m4-roster.md
src/slm_coding_bench/: __init__.py  cli.py  config.py  extract.py  models.py  registry.py  runner.py
src/slm_coding_bench/deployments/: base.py  openai_compat.py
src/slm_coding_bench/executors/: _child_runner.py  base.py  subprocess_exec.py
src/slm_coding_bench/solvers/: base.py  multi_agent.py  single_agent.py
src/slm_coding_bench/suites/: base.py  parity_suite.py  perf_suite.py  test_suite.py
src/slm_coding_bench/tasks/: loader.py  manifest.py
src/slm_coding_bench/util/: stats.py
tasks/classics/count_vowels/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/classics/fizzbuzz/: manifest.yaml  prompt.md  tests.py
tasks/classics/gcd/: manifest.yaml  prompt.md  tests.py
tasks/classics/is_anagram/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/classics/is_palindrome/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/classics/roman_to_int/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/classics/two_sum/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/classics/valid_parentheses/: manifest.yaml  prompt.md  reference.py  tests.py
tasks/custom/base62/: generators.py  manifest.yaml  perf.py  prompt.md  reference.py  tests.py
tests/: test_corpus.py  test_executor.py  test_extract.py  test_multi_agent.py  test_runner.py  test_suites.py
(+72 files in other folders)
