[project]
name = "slm-coding-bench"
version = "0.1.0"
description = "A small, high-signal coding benchmark for (small) LLMs across models, deployments, and solver strategies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Jose Laruta" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
mlx = ["psutil>=5.9"]

[project.scripts]
slm-bench = "slm_coding_bench.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slm_coding_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
